--- a/templates/register.html
+++ b/templates/register.html
@@ -26,7 +26,7 @@
             <div class="col-lg-12" >
                 <div class="form-area login-form " style="padding-left: 350px; height:800px; padding-top:10px;">
                     <div class="form-input1">
-                      <h1>SignUp</h1>
+                      <h1 style="color: black;">SignUp</h1>
                       <form method="POST">
                         <div class="form-group">
                           <input type="text" id="" name="firstname" required>
