--- a/static/css/style.css
+++ b/static/css/style.css
@@ -245,7 +245,7 @@ button {
      padding-bottom: 250px;
      height:max-content;
      background-position: center;
-     background-repeat: no-repeat;
+     background-repeat: repeat;
      background-size:cover;
      position: relative;
 }
@@ -268,9 +268,9 @@ button {
      float: center;
      font-size: 42px;
      color: #fdfdfe;
-     padding-top: 50px;
+     padding-top: 40px;
      text-align: center;
-     padding-bottom: 80px;
+     padding-bottom: 70px;
      font-family: 'Poppins', sans-serif;
 
 }
@@ -407,7 +407,7 @@ button {
     float:left;
     font-size: 20px;
     text-align: center;
-    color:#820cdb;
+    color:#bf7cf7;
     background-color: #ffffff ;
     padding: 17px 18px;
     border-radius: 32px;
@@ -535,7 +535,7 @@ button {
     text-align: center;
     font-size: 18px;
     color: #ffffff;
-    background-color: #8929cf;
+    background-color: #bf7cf7;
     padding: 10px 0px;
     margin-top: 40px;
 }
@@ -930,14 +930,14 @@ a,a:hover{
 .myform-area{
   overflow: hidden;
   padding: 60px 0;
-  background: #9262b9;/*ok*/
+  background: #bf7cf7;/*ok*/
   position: relative;
   padding-top: 100px;
   padding-bottom: 100px;
 }
 .myform-area .form-area{
   position: relative;
-  background: #9262b9; /*rgba(103,58,183,0.7);*/
+  background: #bf7cf7; /*rgba(103,58,183,0.7);*/
   width: 100%;
   height: 400px;
   overflow: hidden;
@@ -1038,7 +1038,7 @@ a,a:hover{
     top: -5px;
     opacity: 0;
     left: 0;
-    color: rgba(103,58,183);
+    color: #bf7cf7;
     font-size: 12px;
     color: #07315B;
     font-weight: bold;
@@ -1047,13 +1047,13 @@ a,a:hover{
 .myform-area .form-area .form-input textarea:focus,
 .myform-area .form-area .form-input input:valid,
 .myform-area .form-area .form-input textarea:valid{
-    border-bottom: 2px solid rgba(103,58,183);
+    border-bottom: 2px solid #bf7cf7;
 }
 .myform-area .form-area .form-text{
     margin-top: 30px;
 }
 .myform-area .form-area .form-text span a{
-    color: rgba(103,58,183);
+    color: #bf7cf7;
 }
 .myform-area .form-area .myform-button{
     margin-top: 40px;    
@@ -1065,7 +1065,7 @@ a,a:hover{
     width: 100%;
     height: 50px;
     font-size: 17px;
-    background: rgba(103,58,183);
+    background: #bf7cf7;
     border: none;
     border-radius: 50px;
     color: #fff;
@@ -1083,7 +1083,7 @@ a,a:hover{
      background:#e0a8fe ;
      border: none;
      border-radius: 50px;
-     color: rgba(103,58,183);
+     color: #3d045f;
      cursor: pointer;
      -webkit-transition: all .5s;
      -o-transition: all .5s;
@@ -1091,6 +1091,7 @@ a,a:hover{
      box-shadow: 0 0 10px 0 #e6b9ff;
      margin-top: 20px;
      margin-bottom: 30px;
+     font-weight: bold;
  }
 .myform-area .form-area .myform-button .myform-btn:hover{
     background: #07315B;
@@ -1120,7 +1121,7 @@ a,a:hover{
     box-sizing: border-box;
 }
 .myform-area .form-area .form-input1{
-  background-color: rgba(103,58,183);
+  background-color: #f4e7ff;
   position: relative;
   overflow: hidden;
   box-shadow: 0 30px 40px 0 rgb(218, 200, 250);
@@ -1128,7 +1129,7 @@ a,a:hover{
 }
 .myform-area .form-area .form-input1{
     width: 50%;
-    background: rgba(103,58,183);
+    background: #ffffff;
     padding: 40px 30px;
     height: 3500px;
 }
@@ -1160,8 +1161,6 @@ a,a:hover{
 }
 .myform-area .form-area .form-input1 form .form-group{
     position: relative;
-    background: rgba(103,58,183);
-    color: rgba(103,58,183);
 }
 .myform-area .form-area .form-input1 form .form-group label{
     position: absolute;
@@ -1170,7 +1169,7 @@ a,a:hover{
     left: 0;
     pointer-events: none;
     font-size: 14px;
-    color: rgba(103,58,183);
+    color: #bf7cf7;
     margin-bottom: 0;
     transition: all .6s;
 }
@@ -1224,3 +1223,6 @@ input[type=file]{
 
 .imageflex { display: flex; }
 .imageflexcontent { margin-left: 5px; margin-top: 0; }
+
+
+
