--- a/templates/mind_reader.html
+++ b/templates/mind_reader.html
@@ -5,6 +5,23 @@
 {% endblock %}
 
 {% block content %}
+<style>
+    body {
+        margin: 0;
+        padding: 0;
+        background-image: url('static/images/num.jpg'); /* Replace with your image URL */
+        background-repeat: repeat;
+        background-attachment:initial;
+        background-size:cover; /* Ensure the image is displayed at its original size */
+    }
+    
+    .content {
+        padding: 20px;
+        max-width: 800px;
+        margin: 0 auto;
+    }
+</style>
+
 {% with messages = get_flashed_messages(with_categories=true) %}
 	{% if messages %}
 		{% for category , message in messages %}
@@ -16,12 +33,12 @@
 {% endwith %}
 
 
-<section class="myform-area">
+<!-- <section class="myform-area"> -->
     <div class="container" style=" padding-bottom: 145px;">
         <div class="row justify-content-center">
             <div class="col-lg-8">
                 <form class="align-items-center" method="post">
-                    <h1 style=" padding-top: 40px;">Select a number : </p>
+                    <h1 style="padding-top: 190px; font-size: 40px; font-weight:bold; color: white;">Select a number : </p>
                     <input name="selected_number" class="form-control form-control-lg" type="text" placeholder="Enter a number ... " aria-label=".form-control-lg example">
                     <div >
                         <button id="upload-submit" type="submit" class="btn btn-primary btn-lg">Submit</button>
