--- a/templates/result_mindreader.html
+++ b/templates/result_mindreader.html
@@ -8,15 +8,31 @@
 
 {% block content %}
 
-<section class="myform-area">
+<style>
+    body {
+        margin: 0;
+        padding: 0;
+        background-image: url('static/images/num.jpg'); /* Replace with your image URL */
+        background-repeat: repeat;
+        background-attachment:initial;
+        background-size:cover; /* Ensure the image is displayed at its original size */
+    }
+    
+    .content {
+        padding: 20px;
+        max-width: 800px;
+        margin: 0 auto;
+    }
+</style>
+<!-- <section class="myform-area"> -->
     <div class="container" style=" padding-bottom: 175px;">
         <div class="row justify-content-center">
             <div class="col-lg-8">
                 <p> </p>
-                <h6 class="website_text" style="padding-top: 1px; padding-bottom: 70px; font-size: 25px; "> Your selected number was : </h6>              
+                <h6 class="website_text" style="padding-top: 180px; padding-bottom: 65px; font-size: 43px; color:white"> Your selected number was : </h6>              
                 <div class="col-lg-6" style="float:none;margin:auto;">
-                    <h1 style=" text-align: center; font-size: 50px; ">
-                        <b> {{ selected_number }} !! 😎</b> 
+                    <h1 style=" text-align: center; font-size: 120px; color:white">
+                        <b> {{ selected_number }} !! </b> 
                     </h1>
                 </div>
             </div>
