--- a/templates/layout.html
+++ b/templates/layout.html
@@ -12,7 +12,7 @@
     <meta name="keywords" content="">
     <meta name="description" content="">
     <meta name="author" content="">	
-    <link rel="stylesheet" type="text/css" href="static/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="static/css/bootstrap.min.css" >
     <link rel="stylesheet" type="text/css" href="static/css/style.css">
     <link rel="stylesheet" href="static/css/responsive.css">
     <link rel="icon" href="static/images/fevicon.png" type="image/gif" />
@@ -38,11 +38,15 @@
                 <a class="nav-link" href="/">HOME</a>
               </li>                   
               <li class="nav-item">
+                <a class="nav-link" href="/blog">BLOG</a>
+              </li>               
+              <li class="nav-item">
                 <a class="nav-link" href="/register">SIGNUP</a>
               </li>                
               <li class="nav-item">
                 <a class="nav-link" href="/login">LOGIN</a>
-              </li>           
+              </li>
+          
               <li class="nav-item">
                 <a class="nav-link" href="/logout">LOGOUT</a>
               </li>                   
