--- a/templates/blog.html
+++ b/templates/blog.html
@@ -7,17 +7,32 @@
 
 {% block content %}
 
+<style>
+    body {
+        margin: 0;
+        padding: 0;
+        background-image: url('static/images/ban9.jpg'); /* Replace with your image URL */
+        background-repeat: repeat;
+        background-attachment: initial;
+        background-size: cover; /* Ensure the image is displayed at its original size */
+    }
+    .list-group {
+        border: 8px !important; /* Optional: Remove border */
+        border-color: darkblue ;
+    }
+</style>
+
 <div class="row mt-6">
-    <div class="col-6">
+    <div class="col-9" style="padding-left:400px; padding-top: 50px;">
         <div class="list-group">
 
             {% for post in posts %}
-                <a href="{{ url_for('post_detail', title=post.title ) }}" class="list-group-item list-group-item-action" aria-current="true">
+                <a href="{{ url_for('postdetail', title=post.title ) }}" class="list-group-item list-group-item-action" aria-current="true" style="margin-top: 10px; border:3px; border-color:blue;">
                     <div class="d-flex w-100 justify-content-between">
-                        <h5 class="mb-1">{{ post.title }}</h5>
+                        <h2 class="mb-1" style="color: rgb(54, 2, 195); font-size: 26px;"><b>{{ post.title }}</b></h2>
                     </div>
-                    <p class="mb-1 text-truncate"> {{ post.content }} ...</p>
-                    <p> Author : {{ post.author }} </p>
+                    <p class="mb-1 text-truncate" style="font-size: 18px;"> {{ post.content }} ... </p>
+                    <p><b> Author : {{ post.author }} </b></p>
                     <small>{{ post.time_stamp }}</small>
                 </a> 
 
